# dev_ws

./: .gitignore  AGENTS.md  LICENSE  README.md
config/: efficientnet_lite0_workconfig.json  fcosb3workconfig.json  fcosworkconfig.json  mobilenet_ssd_workconfig.json  mobilenet_unet_workconfig.json  mobilenetv2workconfig.json  stdc_workconfig.json  yolo26workconfig.json  yolov10workconfig.json  yolov11workconfig.json  yolov12workconfig.json  yolov2workconfig.json  yolov3workconfig.json  yolov5workconfig.json  yolov8segworkconfig.json  yolov8workconfig.json
docs/: details.md  udev.md
src/origincar/: wheeltec_udev  wheeltec_udev.sh
src/origincar/lslidar_driver/launch/: lsn10_launch.py  viewer_scan_launch.py
src/origincar/lslidar_driver/params/lidar_uart_ros2/: lsn10.yaml
src/origincar/lslidar_driver/src/: lslidar_driver.cc
src/origincar/origincar_base/config/: ekf.yaml
src/origincar/origincar_base/include/origincar_base/: origincar_base.h
src/origincar/origincar_base/launch/: base_serial.launch.py  origincar_bringup.launch.py  robot_mode_description.launch.py
src/origincar/origincar_base/scripts/: cmd_vel_to_ackermann_drive.py
src/origincar/origincar_base/src/: origincar_base.cpp
src/origincar/origincar_bringup/launch/: usb_websocket_display.launch.py
src/origincar/origincar_description/: CMakeLists.txt  package.xml
src/origincar/origincar_description/launch/: display.launch.py
src/origincar/origincar_description/meshes/: base_link1.STL  lslidar_N10.stl  origincar_base.STL  origincar_camera.stl  origincar_top.stl  top_link.stl
src/origincar/origincar_description/urdf/: origincar.urdf  origincar.xacro  origincar_stl.xacro
src/origincar/origincar_nav/: CMakeLists.txt  package.xml
src/origincar/origincar_nav/behavior_trees/: navigate_through_poses_ackermann.xml  navigate_to_pose_ackermann.xml
src/origincar/origincar_nav/config/: nav2_params.yaml
src/origincar/origincar_nav/launch/: navigation.launch.py
src/origincar/origincar_nav/rviz/: default.rviz
src/origincar/origincar_qr/: AGENTS.md  CMakeLists.txt  package.xml
src/origincar/origincar_qr/launch/: qr_scanner_cpp.launch.py  qr_scanner_py.launch.py
src/origincar/origincar_qr/origincar_qr/: __init__.py  qr_scanner_py_node.py
src/origincar/origincar_qr/scripts/: qr_scanner_py_node
src/origincar/origincar_qr/src/: qr_scanner_node.cpp
src/origincar/origincar_slam/: CMakeLists.txt  package.xml
src/origincar/origincar_slam/config/: slam_params.yaml
src/origincar/origincar_slam/launch/: map_saver.launch.py  slam.launch.py
src/origincar/origincar_slam/map/: map.1.pgm  map.1.yaml  map.pgm  map.yaml  map_test.yaml  map_v0.0.yaml  map_v0.1.pgm  map_v0.1.yaml
