<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>origincar_qr</name>
  <version>0.1.0</version>
  <description>QR code scanner (C++/libzbar + Python/OpenCV): capture camera frames and print decoded data to stdout</description>
  <maintainer email="3181666393@qq.com">yznn007</maintainer>
  <license>GPL v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- C++ node dependencies -->
  <depend>rclcpp</depend>
  <depend>libopencv-dev</depend>
  <depend>libzbar-dev</depend>

  <!-- Python node dependencies -->
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
